# web-tokenizers

./: Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: deploy.yml
assets/: index-BqYTn9dD.js  index-BxPGUTzF.css  index-C5ySxaCt.css  index-C6pm8NvG.js  index-CZBdkoZW.css  index-C_gFyttd.js  index-CamdPsYI.js  index-D6x9GC4x.css  index-Di4_wzRz.js  index-DzHRcRK9.css  index-vqtmlwv4.js  tokenizer-BDAhC6zb.js
scripts/: build.bat
src/: lib.rs
web/: package-lock.json  package.json  vite.config.js
web/src/: App.vue  package.json
web/src/assets/wasm/: wasm_tokenizers.js  wasm_tokenizers_bg.wasm.d.ts  web_tokenizers.js
web/src/utils/: encoder.js
web/src/wasm/: web_tokenizers.d.ts
web/src/workers/: tokenizer.js
