[package]
name = "web-tokenizers"
version = "0.1.0"
authors = ["元勛 何 <kevinzoids@gmail.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

tokenizers = { version = "0.21.4", default-features = false, features = [
    "fancy-regex",
] }
getrandom = { version = "0.3.3", features = ["wasm_js"] }
once_cell = "1.21.3"
web-sys = "0.3.77"
js-sys = "0.3.77"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
